# 3

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
app/: main.py
tests/: test_sample.py
