[tool.poetry]
name = "travel_experiences_backend"
version = "0.1.0"
description = "Backend para una red social de experiencias de viaje"
authors = ["Tu Nombre <tuemail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.18.0"
psycopg2 = "^2.9.6"  # Conector de PostgreSQL
pymongo = "^4.0.2"   # Conector de MongoDB
redis = "^4.4.0"     # Cliente de Redis

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
